--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 </div>      
 
                 <div class="socials mt-4">
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
+                    <a class="social-item" href="https://www.facebook.com/vy.vuvo.7/"><i class="ti-facebook"></i></a>
+                    <!-- <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
                     <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a> -->
                 </div>
             </div>              
             <div class="img-holder">
@@ -79,15 +79,15 @@
         <!-- Header-widget -->
         <div class="widget">
             <div class="widget-item">
-                <h2>124</h2>
-                <p>Happy Clients</p>
+                <h2>6+</h2>
+                <p>Year Experience</p>
             </div>
             <div class="widget-item">
-                <h2>456</h2>
+                <h2>96+</h2>
                 <p>Project Completed</p>
             </div>
             <div class="widget-item">
-                <h2>789</h2>
+                <h2>8+</h2>
                 <p>Awards Won</p>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     <img src="assets/imgs/avatar.jpg" alt="" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
-                    <h6 class="title">James Smith</h6>
+                    <h6 class="title">Nguyễn Hạ Vy</h6>
                     <p class="subtitle">UI/UX Designer</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum repudiandae quidem quod, magni magnam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p>
