--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">Violinist</button>
-                    <button class="btn btn-dark rounded">Developer</button>
+                    <button class="btn btn-dark rounded">Fullstack</button>
                 </div>      
 
                 <div class="socials mt-4">
@@ -103,10 +103,10 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Nguyễn Hạ Vy</h6>
-                    <p class="subtitle">UI/UX Designer</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum repudiandae quidem quod, magni magnam.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p>
-                    <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>                   
+                    <p class="subtitle"></p>
+                    <p>As a person who is passionate about perfection, I always take action to develop myself day by day. So, I'm skilled in violin, chemistry, full stack programming and teaching.</p>
+                    <p>Là một con người đam mê sự hoàn hảo, tôi luôn hành động để phát triển bản thân từng ngày. Vậy nên, tôi là tôi có có kỹ năng về vilolin, hóa học, lập trình full stack và giảng dạy.</p>
+                    <button class="btn btn-primary rounded mt-3">Call me</button>                   
                 </div>
             </div>
         </div>
